--- a/readme
+++ b/readme
@@ -1,14 +1,22 @@
-В файле README.md опишите своими словами какие файлы будут проигнорированы в будущем благодаря добавленному .gitignore.
+devops-нетология
+#Описание файла gitignore в каталоге terraform своими словами
 
-Проигнорированы будут файлы .tfvars а так же все  файлы содержашие конфиденциальные данные такие как пароли, секретные ключи, и другие секреты. 
+Игнорирование файлов каталогов terraform любой вложенности
+* /.терраформ/
 
-Кондифицальные данные Включить файлы tfplan, чтобы игнорировать вывод плана команды: план терраформирования=tfplan
-# # пример: * план tf*
+файлы с расширением tfstate и все архивные версии.
+*.tfstate .tfstate.
 
-# Игнорировать файлы конфигурации командной
-строки.terraformrc
-terraform.rc
-Игнорируемые файлы отслеживаются в специальном файле .gitignore, который регистрируется в корневом каталоге репозитория. В Git нет специальной команды для указания игнорируемых файлов: вместо этого необходимо вручную отредактировать файл .gitignore, чтобы указать в нем новые файлы, которые должны быть проигнорированы. Файлы .gitignore содержат шаблоны, которые сопоставляются с именами файлов в репозитории для определения необходимости игнорировать эти файлы.
+Файлы с именем crash.log
+краш.журнал
+
+Файлы с расширением tfvars
+*.tfvars
+
+игнорирование файлов по заданным именам + файлы по именам с окончанием на _override.tf(.json)
+override.tf override.tf.json *_override.tf *_override.tf.json
+
+#игнорирование конфигураций коммандной строки тераформ?! .terraformrc terraform.rc
 
 
 
